<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="volver_al_men">volver al menu</string>
    <string name="libre">libre\n</string>
    <string name="espacios_disponibles_5">espacios disponibles</string>
    <string name="estacionamiento_a">estacionamiento A</string>
    <string name="volver_al_login">Volver al login</string>
    <string name="registrar">Registrar</string>
    <string name="contrase_a">Contraseña</string>
    <string name="logo_de_la_app">Logo App\n</string>
    <string name="tu_perfil">Tu perfil</string>
    <string name="nombre_de_usuario">Nombre de usuario</string>
    <string name="editar_nombre">editar nombre</string>
    <string name="borrar_nombre">Borrar nombre</string>
    <string name="editar_contraseña">editar contraseña</string>
    <string name="borrar_contraseña">borrar contraseña</string>
    <string name="mostrar_contrase_a">Mostrar contraseña</string>
    <string name="guardar_datos">Guardar datos</string>
    <string name="salir">Salir</string>
    <string name="ver_estacionamientos">Ver estacionamientos</string>
    <string name="ver_perfil">Ver perfil</string>
    <string name="bienvenido_a_la_app">Bienvenidos a la app</string>
    <string name="usuario">Usuario</string>
    <string name="iniciar_sesion">Iniciar sesion</string>
    <string name="registrarse">registrarse</string>
    <string name="confirmar">confirmar</string>
    <string name="app_name">App name</string>
    <string name="ver_reservas">Ver reservas\n</string>
    <string name="gesti_n_de_reservas">Gestión de Reservas</string>
    <string name="espacios_reservados">Espacios reservados:</string>
</resources>
