<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:id="@+id/perfil"
    android:gravity="center">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/logo_de_la_app"
        android:src="@drawable/logoe"
        android:layout_marginBottom="24dp" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tu_perfil"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginBottom="8dp">

        <TextView
            android:id="@+id/username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/nombre_de_usuario"
            android:textSize="18sp"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/editUsernameButton"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_edit"
            android:contentDescription="@string/editar_nombre"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />

        <ImageView
            android:id="@+id/deleteUsernameButton"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/trash_icon"
            android:contentDescription="@string/borrar_nombre" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginBottom="8dp">

        <TextView
            android:id="@+id/password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/contrase_a"
            android:textSize="18sp"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/editPasswordButton"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_edit"
            android:contentDescription="@string/editar_contraseña"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />

        <ImageView
            android:id="@+id/deletePasswordButton"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/trash_icon"
            android:contentDescription="@string/borrar_contraseña" />
    </LinearLayout>

    <Button
        android:id="@+id/showPasswordButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mostrar_contrase_a"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/saveDataButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guardar_datos"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/backToMenuButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/volver_al_men" />
</LinearLayout>
