<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/menu"
    tools:context=".menu"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    android:background="#f5f5f5">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/logo_de_la_app"
        android:src="@drawable/logoe"
        android:layout_marginBottom="24dp"
        />

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bienvenido_a_la_app"
        android:textSize="24sp"
        android:textColor="#000000"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/ver_perfil_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ver_perfil" />

    <Button
        android:id="@+id/ver_estacionamientos_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ver_estacionamientos" />


    <Button
        android:id="@+id/reservas_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ver_reservas" />

    <Button
        android:id="@+id/salir_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/salir" />

</LinearLayout>