<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/reservas"
    tools:context=".reservas"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp">

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gesti_n_de_reservas"
        android:textSize="24sp"
        android:textColor="#000000"
        android:layout_marginBottom="24dp" />

    <TextView
        android:id="@+id/reserved_spaces_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/espacios_reservados"
        android:textSize="18sp"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/volver_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/volver_al_men" />
</LinearLayout>
