<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/estacionamiento"
    tools:context=".estacionamiento"
    android:padding="16dp">


    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/estacionamiento_a"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_gravity="center" />

    <TextView
        android:id="@+id/available_spaces"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/espacios_disponibles_5"
        android:layout_gravity="center"
        android:textSize="16sp"
        android:layout_marginTop="8dp" />


    <GridLayout
        android:id="@+id/mapaEstacionamiento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="4"
        android:layout_marginTop="16dp">

        <TextView
            android:id="@+id/space1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/space_available"
            android:text="@string/libre"
            android:gravity="center"
            android:padding="16dp" />

        <TextView
            android:id="@+id/space2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/space_available"
            android:text="@string/libre"
            android:gravity="center"
            android:padding="16dp" />

        <TextView
            android:id="@+id/space3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/space_available"
            android:text="@string/libre"
            android:gravity="center"
            android:padding="16dp" />

        <TextView
            android:id="@+id/space4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/space_available"
            android:text="@string/libre"
            android:gravity="center"
            android:padding="16dp" />

        <TextView
            android:id="@+id/space5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/space_available"
            android:text="@string/libre"
            android:gravity="center"
            android:padding="16dp" />

        <TextView
            android:id="@+id/space6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/space_available"
            android:text="@string/libre"
            android:gravity="center"
            android:padding="16dp" />

        <TextView
            android:id="@+id/space7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/space_available"
            android:text="@string/libre"
            android:gravity="center"
            android:padding="16dp" />

        <TextView
            android:id="@+id/space8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/space_available"
            android:text="@string/libre"
            android:gravity="center"
            android:padding="16dp" />

    </GridLayout>

    <Button
        android:id="@+id/button_volver_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/volver_al_men"
        android:layout_gravity="center"
        android:layout_marginTop="16dp" />

</LinearLayout>
